# citrus-sorter

./: MODIFICATION_NOTES.md
components/: CMakeLists.txt
components/CAMERA/: camera.c  camera.h  camera_web_server.c  camera_web_server.h
components/FRUIT_DETECT/: fruit_detect.c  fruit_detect.h
components/LED/: led.c  led.h
components/M0_UART/: m0_uart.c  m0_uart.h
main/: idf_component.yml  main.c
